srcs/telegraf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf
  labels:
    app: telegraf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telegraf
  template:
    metadata:
      labels:
        app: telegraf
    spec:
      serviceAccountName: telegraf
      containers:
        - image: telegraf_alpine
          imagePullPolicy: Never
          name: telegraf
          ports:
          - containerPort: 8125
          name: telegraf
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: telegraf
# spec:
#   selector:
#     app: telegraf
#   ports:
#   - protocol: UDP
#     port: 8125
