srcs/ftps.yaml
apiVersion: v1
kind: Service
metadata:
  name: ftps-svc
  annotations:
    metallb.universe.tf/address-pool: ftps-ip
  labels:
    app: ftps
spec:
  type: LoadBalancer
  selector:
    app: ftps
  ports:
  - name: ftp-data
    port: 20
  - name: ftp-connection
    port: 21
  - name: pftp-data-0
    port: 30000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftps
  labels:
    app: ftps
spec:
  selector:
    matchLabels:
      app: ftps
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ftps
    spec:
      containers:
      - name: ftps
        image: ftps_alpine
        imagePullPolicy: Never
        ports:
        - containerPort: 20
        - containerPort: 21
        - containerPort: 30000
