srcs/grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc
  labels:
    app: grafana
spec:
  # type: ClusterIP
  selector:
    app: grafana
  ports:
  - port: 3000
    targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  selector:
    matchLabels:
      app: grafana
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana_alpine
        imagePullPolicy: Never
        volumeMounts:
        - name: grafana-config
          mountPath: /usr/share/grafana/conf/custom.ini
          subPath: custom.ini
        - name: provisioning
          mountPath: /usr/share/grafana/conf/provisioning
      volumes:
      - name: grafana-config
        configMap:
          name: grafana-config
          items:
          - key: custom.ini
            path: custom.ini
      - name: provisioning
        configMap:
          name: grafana-config
          items:
          - key: dashboards.yml
            path: dashboards/dashboards.yml
          - key: datasources.yml
            path: datasources/datasources.yml
