srcs/influxdb.yaml
# volumeMode: Filesystem

apiVersion: v1
kind: Service
metadata:
  name: influxdb-service
  labels:
    app: influxdb
spec:
  type: NodePort
  ports:
  - port: 8086
    nodePort: 8086
    protocol: TCP
    name: http
  selector:
    app: influxdb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
  labels:
    app: influxdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
      - name: influxdb
        image: influxdb_alpine
        ports:
        - containerPort: 8086
        imagePullPolicy: Never
        volumeMounts:
        - name: influxdb
          mountPath: /var/lib/influxdb
      volumes:
      - name: influxdb
        persistentVolumeClaim:
          claimName: influxdb-pvc # maybe change to influxdb-pvc
