srcs/phpmyadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-svc
  # annotations:
  #   metallb.universe.tf/allow-shared-ip: onlyone
  labels:
    app: phpmyadmin-deployment
spec:
  selector:
    app: phpmyadmin-deployment
  ports:
  - port: 5000
    targetPort: 80
  # loadBalancerIP: 10.0.0.2
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin-deployment
  template:
    metadata:
      labels:
        app: phpmyadmin-deployment
    spec:
      containers:
      - name: phpmyadmin
        image: phpmyadmin_alpine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - name: phpmyadmin-persistent-storage
          mountPath: /var/www/localhost/htdocs
      volumes:
      - name: phpmyadmin-persistent-storage
        persistentVolumeClaim:
          claimName: phpmyadmin-pv-claim
