srcs/wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
  # annotations:
  #   metallb.universe.tf/allow-shared-ip: onlyone
  labels:
    app: wordpress-deployment
spec:
  selector:
    app: wordpress-deployment
  ports:
  - name: wordpress
    port: 5050
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  labels:
    app: wordpress-deployment
spec:
  selector:
    matchLabels:
      app: wordpress-deployment
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress-deployment
    spec:
      containers:
      - name: wordpress
        image: wordpress_alpine
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
